[package]
name = "solbond"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbond"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
solana-program = "1.8.12"
spl-token = { version = "3.1.4", features = ["no-entrypoint"] }
stable-swap-anchor = "1.6.7"
