[package]
name = "solbond"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbond"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
solana-program = "~1.9.13"
spl-token = { version = "3.1.4", features = ["no-entrypoint"] }
stable-swap-anchor = {path = "../../deps/stable-swap/stable-swap-anchor/"}

marinade-finance = {path = "../../deps/liquid-staking-program/programs/marinade-finance/", features = ["no-entrypoint"]}
marinade-onchain-helper = {path = "../../deps/marinade-onchain-helper/", features = ["no-entrypoint"]}
spl-token-lending = { path = "../../deps/solana-program-library/token-lending/program/", features= ["no-entrypoint"] }

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "~1.9.13"
solana-sdk = "~1.9.13"
solana-test-utils = "0.1.19"